# SolarSystem

./: .gitignore  README.md  SolarSystem.sln  SolarSystem.vcxproj  SolarSystem.vcxproj.filters  app.py  installer.py  launcher.py  pyproject.toml
Effemeridi/: writer.py
Effemeridi/data/: Jupiter.txt  Venus.txt
Ephemerids/: planets_data_v2.json  units.txt
Ephemerids/data/: Earth.txt  Mars.txt  Mercury.txt  Moon.txt  Neptune.txt  Pluto.txt  Saturn.txt  Sun.txt  Uranus.txt
c++/: MyPlanets.txt  SistemaSolare.cpp  SistemaSolare.h  Sun_Earth.txt  main.cpp  makefile  prova.cpp  test.cpp  test_input.h
c++/inc/: Constants.h  Grave.h  PointMass.h  Quadrupole.h  SistemaSolare.h  SolarSystem.h  Vector3D.h  Vettore3D.h
c++/src/: Grave.cpp  PointMass.cpp  Quadrupole.cpp  SistemaSolare.cpp  SolarSystem.cpp  Vector3D.cpp  Vettore3D.cpp
cpp/: MyPlanets.txt  effemeridi.txt  main.cpp
cpp/inc/: PointMass.h  Vector3D.h
cpp/src/: PointMass.cpp  SolarSystem.cpp
dashboard/: __init__.py  app.py  callbacks.py  components.py  constants.py  description.txt  droplet-config.sh  ephemerids.py  layout.py  nginx.txt  planets_data.py  plots.py  supervisor.txt  tmp.py
dashboard/utils/: dashboardlogging.py
input/: solar_system_default.json  solarsystem.txt
input/defaults/: Single_AngularMomenta.txt  Single_Energies.txt  Total_Energy.txt  (+2 more)
input_data/: effemeridi.h  effemeridi.txt  input_file.h
python/: 3danimate.py  3dplot.py  converter.py  energy_plotter.py  ephemerid_generator.py  functions.py  plotter.py  test_plot.py
tests/: functions.txt  launcher.py  plotter.py  sample.txt
