[tool.poetry]
name = "solarsystem"
version = "0.1.0"
description = ""
authors = ["Luca Paganin <luca.paganin1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.6.1"
Flask = "^2.2.1"
python-dotenv = "^0.20.0"
dash-bootstrap-components = "^1.2.1"
ipython = "^8.4.0"
pandas = "^1.4.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
